[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/HoveringWeapon.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PickupPos:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.82121, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickupPos:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "hover"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PickupPos:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.82121, 0 ), Vector3( 0, 0.8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickupPos:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="HoveringWeapon" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.988 )
script = ExtResource( 1 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -1, 2.6054e-15, -8.74228e-08, -8.74228e-08, -2.98023e-08, 1, 0, 1, 2.98023e-08, 0, 1.90811, 0 )
light_energy = 1.929
light_specular = 2.255
light_bake_mode = 0
shadow_enabled = true
spot_range = 4.998
spot_angle = 20.61

[node name="PickupPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.82121, 0 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hover"
anims/RESET = SubResource( 2 )
anims/hover = SubResource( 1 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
